# IE-UQ

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: cleaned_dataset.jsonl
ie_uq/: __init__.py  completion_uq.py  config_utils.py  data_load.py  data_parse.py  data_preprocess.py  evaluate.py  experiment_sampling.py  extraction_utils.py  few_shot_inference.py  few_shot_inference_extraction.py  inference.py  json_output_parse.py  synthetic_data.py  uq_score.py  uq_utils.py
ie_uq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: training_pipeline.ipynb  uq_extraction_runbook.ipynb
runs/active_learning_uq_results/: adapter_config.json  fewshot2output.json  scores.csv  train_dataset.jsonl
runs/active_learning_uq_results_llama8b/: adapter_config.json  fewshot2output.json  scores.csv  train_dataset.jsonl
runs/random-100-dataset/: train_dataset.jsonl
runs/random_baseline_uq_results/: adapter_config.json  fewshot2output.json  scores.csv  train_dataset.jsonl
runs/random_baseline_uq_results_llama8b/: adapter_config.json  fewshot2output.json  scores.csv
runs/synth_extraction_ft_llama8b/: fewshot2output.json  scores.csv  train_dataset.jsonl
runs/synth_json_ft_llama8b/: adapter_config.json
runs/synth_json_gen/: adapter_config.json
runs/synth_span_ft_llama8b/: adapter_config.json  train_dataset.jsonl
runs/synth_span_uq_results/: adapter_config.json  fewshot2output.json  scores.csv  train_dataset.jsonl
scripts/: clean_data.py  make_plot.py  synth_trainer.py
